--- a/RNATranscription/src/main/resources/application.yml
+++ b/RNATranscription/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 spring:
-  datasource:
-     driver-class-name: com.mysql.jdbc.Driver
-     url: jdbc:mysql://39.108.52.95:3306/rna_transcription?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-     username: ldchao
-     password: 123456
+  profiles:
+    active: dev
   jpa:
      hibernate:
       ddl-auto: none
@@ -16,8 +13,8 @@ spring:
      cache: false
   http:
     multipart:
-      max-file-size: 3072Mb
-      max-request-size: 3072Mb
+      max-file-size: 100Mb
+      max-request-size: 100Mb
 
 server:
   port: 8080
