--- a/RNATranscription/src/main/resources/application-dev.yml
+++ b/RNATranscription/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
      driver-class-name: com.mysql.jdbc.Driver
-     url: jdbc:mysql://39.108.52.95:3306/rna_transcription?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-     username: ldchao
+     url: jdbc:mysql://114.115.136.191:3306/rna_transcription?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+     username: yuanquan
      password: 123456
