该下载bug，增加任务检索接口

--- a/RNATranscription/src/main/resources/application.yml
+++ b/RNATranscription/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   jpa:
      hibernate:
       ddl-auto: none
-     show-sql: true
+     show-sql: false
      database-platform: org.hibernate.dialect.MySQL5Dialect
   application:
      name: FileUpload
